--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Products</h1>
+  <h1>Products h1</h1>
   <div id="product-list"></div>
 
   <script src="main.js"></script>
